[package]
name = "site_counter"
version = "0.1.0"
edition = "2024"

[dependencies]
num-bigint = { version = "0.4.6", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
colored = "3.0.0"
lazy_static = "1.5.0"
tempfile = "3.20.0"
dashmap = { version = "6.1.0", features = ["serde"] }
num-traits = "0.2.19"
reqwest = "0.12.20"
regex = "1.11.1"
clap = { version = "4.5.40", features = ["derive"] }
fs_extra = "1.3.0"
serde_json = "1.0.140"
